--- a/css/hero.css
+++ b/css/hero.css
@@ -1,5 +1,5 @@
 .hero {
-  background: url("https://unsplash.imgix.net/reserve/QTrNn7DETWGsjyS5L2n5__MG_8345.jpg?fit=crop&fm=jpg&h=700&q=75&w=1050") no-repeat center center;
+  background: url("https://media.licdn.com/mpr/mpr/AAEAAQAAAAAAAAW6AAAAJGI5Mjg2ZDZiLTNkMTMtNDYxYy04MDQxLWQ2MWYyMGQ3NmIwYQ.jpg") no-repeat center center;
   background-size: cover;
   height: 80vh;
   margin-bottom: 3rem; }
